fix sizing for mission statement, remove visual scrollbar

--- a/style.css
+++ b/style.css
@@ -21,12 +21,19 @@
   --cgreen: #28706A
 }
 
+::-webkit-scrollbar 
+{
+  display: none;
+}
+
+
 html, body 
 {
   margin:0;
   box-sizing: border-box;
   padding:0;
 }
+
 
 button
 {
@@ -49,35 +56,6 @@ p, img
 a {
   color: inherit;
   text-decoration: inherit;
-}
-
-.nav
-{
-  position: fixed;
-  top: 0;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  gap: 4vh;
-  justify-content: space-between;
-}
-
-.nav img
-{
-  width: 60px;
-  height: auto;
-}
-
-.links
-{
-  display: flex;
-  flex-direction: column;
-  gap: 2vh;
-  justify-content: center;
-  font-family: "gotham_medium", Arial, Helvetica, sans-serif;
-  align-items: start;
-  font-size: 20px;
 }
 
 #title_page
@@ -120,39 +98,44 @@ a {
   align-items: top;
   text-align: center;
   text-align: start;
+ 
 }
 
 #mission_heading
 {
-  font-size: 4vw;
+  font-size: 105px;
+  
 }
 
 .text_box
 {
   background-color:var(--tblack) ;
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-top: 60vh;
-  height:fit-content;
+  height:700px;
   width: 45vw;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .text_block
 {
   font-family: "gotham_book", Arial, Helvetica, sans-serif;
- 
   height: fit-content;
-  font-size: 1.5vw;
+  width: fit-content;
+  font-size: 30px;
   text-align: start;
-  padding-top: 5vh;
-  max-height: 30vh;
-  overflow: hidden;
+  overflow-y: scroll;
+  
 }
 
 #mission_photo
 {
   width: 45vw;
-  height: 57.5vh;
+  height: 700px;
   margin-top: 60vh;
 }
 
